Updating package files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = PySimpleGUI-Events-jyurkiw@yahoo.com
+name = PySimpleGUI_Events
 version = 0.0.1
 author = Jeffrey Yurkiw
 author_email = jyurkiw@yahoo.com
